--- a/notebooks/pipelineV2.ipynb
+++ b/notebooks/pipelineV2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 1,
    "id": "028e075d",
    "metadata": {},
    "outputs": [],
@@ -1374,7 +1374,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AMBIENTE_ML",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1388,7 +1388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
